# =================================================================
# C++ 기초 플러스 예제 관리 프로젝트 (CMake)
# =================================================================
cmake_minimum_required(VERSION 3.10)
project(Cpp_Primer_Plus)

# [설정 1] C++ 표준 설정
# 책의 예제 호환성을 위해 C++11을 사용하며, 해당 버전이 필수임을 명시합니다.
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# [설정 2] 출력 경로 설정
# 빌드된 모든 실행 파일(.exe)은 'build/bin' 폴더 안에 모이게 됩니다.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


# -----------------------------------------------------------------
# 제 2장: 시작하기 (Chapter 02)
# -----------------------------------------------------------------
add_executable(ch02_01 "source/Chapter02/ch02_01.cpp")
add_executable(ch02_02 "source/Chapter02/ch02_02.cpp")
add_executable(ch02_03 "source/Chapter02/ch02_03.cpp")
add_executable(ch02_04 "source/Chapter02/ch02_04.cpp")
add_executable(ch02_05 "source/Chapter02/ch02_05.cpp")
add_executable(ch02_06 "source/Chapter02/ch02_06.cpp")
add_executable(ex02_01 "excercise/Chapter02/ex02_01.cpp")
add_executable(ex02_02 "excercise/Chapter02/ex02_02.cpp")
add_executable(ex02_03 "excercise/Chapter02/ex02_03.cpp")
add_executable(ex02_04 "excercise/Chapter02/ex02_04.cpp")
add_executable(ex02_05 "excercise/Chapter02/ex02_05.cpp")
add_executable(ex02_06 "excercise/Chapter02/ex02_06.cpp")
add_executable(ex02_07 "excercise/Chapter02/ex02_07.cpp")


# -----------------------------------------------------------------
# 제 3장: 데이터 처리 (Chapter 03)
# -----------------------------------------------------------------
add_executable(ch03_01 "source/Chapter03/ch03_01.cpp")
add_executable(ch03_02 "source/Chapter03/ch03_02.cpp")
add_executable(ch03_03 "source/Chapter03/ch03_03.cpp")
add_executable(ch03_04 "source/Chapter03/ch03_04.cpp")
add_executable(ch03_05 "source/Chapter03/ch03_05.cpp")
add_executable(ch03_06 "source/Chapter03/ch03_06.cpp")
add_executable(ch03_07 "source/Chapter03/ch03_07.cpp")
add_executable(ch03_08 "source/Chapter03/ch03_08.cpp")
add_executable(ch03_09 "source/Chapter03/ch03_09.cpp")
add_executable(ch03_10 "source/Chapter03/ch03_10.cpp")
add_executable(ch03_11 "source/Chapter03/ch03_11.cpp")
add_executable(ch03_12 "source/Chapter03/ch03_12.cpp")
add_executable(ch03_13 "source/Chapter03/ch03_13.cpp")
add_executable(ch03_14 "source/Chapter03/ch03_14.cpp")
add_executable(ex03_01 "excercise/Chapter03/ex03_01.cpp")
add_executable(ex03_02 "excercise/Chapter03/ex03_02.cpp")
add_executable(ex03_03 "excercise/Chapter03/ex03_03.cpp")
add_executable(ex03_04 "excercise/Chapter03/ex03_04.cpp")
add_executable(ex03_05 "excercise/Chapter03/ex03_05.cpp")
add_executable(ex03_06a "excercise/Chapter03/ex03_06a.cpp")
add_executable(ex03_06b "excercise/Chapter03/ex03_06b.cpp")
add_executable(ex03_07 "excercise/Chapter03/ex03_07.cpp")


# -----------------------------------------------------------------
# 제 4장: 복합 데이터형 (Chapter 04)
# -----------------------------------------------------------------
add_executable(ch04_01 "source/Chapter04/ch04_01.cpp")
add_executable(ch04_02 "source/Chapter04/ch04_02.cpp")
add_executable(ch04_03 "source/Chapter04/ch04_03.cpp")
add_executable(ch04_04 "source/Chapter04/ch04_04.cpp")
add_executable(ch04_05 "source/Chapter04/ch04_05.cpp")
add_executable(ch04_06 "source/Chapter04/ch04_06.cpp")
add_executable(ch04_07 "source/Chapter04/ch04_07.cpp")
add_executable(ch04_08 "source/Chapter04/ch04_08.cpp")
add_executable(ch04_09 "source/Chapter04/ch04_09.cpp")
add_executable(ch04_10 "source/Chapter04/ch04_10.cpp")
add_executable(ch04_11 "source/Chapter04/ch04_11.cpp")
add_executable(ch04_12 "source/Chapter04/ch04_12.cpp")
add_executable(ch04_13 "source/Chapter04/ch04_13.cpp")
add_executable(ch04_14 "source/Chapter04/ch04_14.cpp")
add_executable(ch04_15 "source/Chapter04/ch04_15.cpp")
add_executable(ch04_16 "source/Chapter04/ch04_16.cpp")
add_executable(ch04_17 "source/Chapter04/ch04_17.cpp")
add_executable(ch04_18 "source/Chapter04/ch04_18.cpp")
add_executable(ch04_19 "source/Chapter04/ch04_19.cpp")
add_executable(ch04_20 "source/Chapter04/ch04_20.cpp")
add_executable(ch04_21 "source/Chapter04/ch04_21.cpp")
add_executable(ch04_22 "source/Chapter04/ch04_22.cpp")
add_executable(ch04_23 "source/Chapter04/ch04_23.cpp")
add_executable(ch04_24 "source/Chapter04/ch04_24.cpp")
add_executable(ex04_01 "excercise/Chapter04/ex04_01.cpp")
add_executable(ex04_02 "excercise/Chapter04/ex04_02.cpp")
add_executable(ex04_03 "excercise/Chapter04/ex04_03.cpp")
add_executable(ex04_04 "excercise/Chapter04/ex04_04.cpp")
add_executable(ex04_05 "excercise/Chapter04/ex04_05.cpp")
add_executable(ex04_06 "excercise/Chapter04/ex04_06.cpp")
add_executable(ex04_07 "excercise/Chapter04/ex04_07.cpp")
add_executable(ex04_08 "excercise/Chapter04/ex04_08.cpp")
add_executable(ex04_09 "excercise/Chapter04/ex04_09.cpp")
add_executable(ex04_10 "excercise/Chapter04/ex04_10.cpp")


# -----------------------------------------------------------------
# 제 5장: 루프와 관계 표현식 (Chapter 05)
# -----------------------------------------------------------------
add_executable(ch05_01 "source/Chapter05/ch05_01.cpp")
add_executable(ch05_02 "source/Chapter05/ch05_02.cpp")
add_executable(ch05_03 "source/Chapter05/ch05_03.cpp")
add_executable(ch05_04 "source/Chapter05/ch05_04.cpp")
add_executable(ch05_05 "source/Chapter05/ch05_05.cpp")
add_executable(ch05_06 "source/Chapter05/ch05_06.cpp")
add_executable(ch05_07 "source/Chapter05/ch05_07.cpp")
add_executable(ch05_08 "source/Chapter05/ch05_08.cpp")
add_executable(ch05_09 "source/Chapter05/ch05_09.cpp")
add_executable(ch05_10 "source/Chapter05/ch05_10.cpp")
add_executable(ch05_11 "source/Chapter05/ch05_11.cpp")
add_executable(ch05_12 "source/Chapter05/ch05_12.cpp")
add_executable(ch05_13 "source/Chapter05/ch05_13.cpp")
add_executable(ch05_14 "source/Chapter05/ch05_14.cpp")
add_executable(ch05_15 "source/Chapter05/ch05_15.cpp")
add_executable(ch05_16 "source/Chapter05/ch05_16.cpp")
add_executable(ch05_17 "source/Chapter05/ch05_17.cpp")
add_executable(ch05_18 "source/Chapter05/ch05_18.cpp")
add_executable(ch05_19 "source/Chapter05/ch05_19.cpp")
add_executable(ch05_20 "source/Chapter05/ch05_20.cpp")
add_executable(ex05_01 "excercise/Chapter05/ex05_01.cpp")
add_executable(ex05_02 "excercise/Chapter05/ex05_02.cpp")
add_executable(ex05_03 "excercise/Chapter05/ex05_03.cpp")
add_executable(ex05_04 "excercise/Chapter05/ex05_04.cpp")
add_executable(ex05_05 "excercise/Chapter05/ex05_05.cpp")
add_executable(ex05_06 "excercise/Chapter05/ex05_06.cpp")
add_executable(ex05_07 "excercise/Chapter05/ex05_07.cpp")
add_executable(ex05_08 "excercise/Chapter05/ex05_08.cpp")
add_executable(ex05_09 "excercise/Chapter05/ex05_09.cpp")
add_executable(ex05_10 "excercise/Chapter05/ex05_10.cpp")


# -----------------------------------------------------------------
# 제 6장: 분기 구문과 논리 연산자 (Chapter 06)
# -----------------------------------------------------------------
add_executable(ch06_01 "source/Chapter06/ch06_01.cpp")
add_executable(ch06_02 "source/Chapter06/ch06_02.cpp")
add_executable(ch06_03 "source/Chapter06/ch06_03.cpp")
add_executable(ch06_04 "source/Chapter06/ch06_04.cpp")
add_executable(ch06_05 "source/Chapter06/ch06_05.cpp")
add_executable(ch06_06 "source/Chapter06/ch06_06.cpp")
add_executable(ch06_07 "source/Chapter06/ch06_07.cpp")
add_executable(ch06_08 "source/Chapter06/ch06_08.cpp")
add_executable(ch06_09 "source/Chapter06/ch06_09.cpp")
add_executable(ch06_10 "source/Chapter06/ch06_10.cpp")